--- a/src/NiceStore.Catalogo.Domain/NiceStore.Catalog.Domain.csproj
+++ b/src/NiceStore.Catalogo.Domain/NiceStore.Catalog.Domain.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>NiceStore.Catalog.Domain</RootNamespace>
+    <AssemblyName>NiceStore.Catalog.Domain</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
