--- a/src/NiceStore.WebApp.MVC/NiceStore.WebApp.MVC.csproj
+++ b/src/NiceStore.WebApp.MVC/NiceStore.WebApp.MVC.csproj
@@ -28,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\NewFolder\" />
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
 </Project>
