init using commands and using validation with fluent validation

--- a/src/NiceStore.WebApp.MVC/NiceStore.WebApp.MVC.csproj
+++ b/src/NiceStore.WebApp.MVC/NiceStore.WebApp.MVC.csproj
@@ -25,6 +25,7 @@
     <ProjectReference Include="..\NiceStore.Catalog.Data\NiceStore.Catalog.Data.csproj" />
     <ProjectReference Include="..\NiceStore.Catalogo.Domain\NiceStore.Catalog.Domain.csproj" />
     <ProjectReference Include="..\NiceStore.Core\NiceStore.Core.csproj" />
+    <ProjectReference Include="..\NiceStore.Payments.Application\NiceStore.Payments.Application.csproj" />
   </ItemGroup>
 
 </Project>
