Initi Command of payments

--- a/src/NiceStore.Payments.Application/NiceStore.Payments.Application.csproj
+++ b/src/NiceStore.Payments.Application/NiceStore.Payments.Application.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\NiceStore.Core\NiceStore.Core.csproj" />
+    <ProjectReference Include="..\NiceStore.Payments.Domain\NiceStore.Payments.Domain.csproj" />
   </ItemGroup>
 
 </Project>
