--- a/src/NiceStore.Payments.Data/NiceStore.Payments.Data.csproj
+++ b/src/NiceStore.Payments.Data/NiceStore.Payments.Data.csproj
@@ -6,4 +6,19 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NiceStore.Catalogo.Domain\NiceStore.Catalog.Domain.csproj" />
+    <ProjectReference Include="..\NiceStore.Core\NiceStore.Core.csproj" />
+    <ProjectReference Include="..\NiceStore.Payments.Domain\NiceStore.Payments.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
